--- a/templates/email.html
+++ b/templates/email.html
@@ -27,5 +27,9 @@
             <br>
             Savings rate: {{last_month_savings_rate | percentage_filter}}
 
+            <br>
+            If we continue at this savings rate, we would be financially independent in 
+            {{last_month_savings_rate | years_to_retirement_filter}}
+
         </div>
 </html>
