Fix return on savings and name in template

--- a/templates/email.html
+++ b/templates/email.html
@@ -29,7 +29,7 @@
 
             <br>
             If we continue at this savings rate, we would be financially independent in 
-            {{last_month_savings_rate | years_to_retirement_filter}}
+            {{last_month_savings_rate | years_to_fi_filter}}
 
         </div>
 </html>
