Adjust template description of years to FI

--- a/templates/email.html
+++ b/templates/email.html
@@ -28,8 +28,9 @@
             Savings rate: {{last_month_savings_rate | percentage_filter}}
 
             <br>
-            If we continue at this savings rate, we would be financially independent in 
-            {{last_month_savings_rate | years_to_fi_filter}}
+            If we have this savings rate all the time, we would have to work for
+            {{last_month_savings_rate | years_to_fi_filter}} years in total to reach 
+            financial independence.!
 
         </div>
 </html>
