Add years_covered and year and month arguments to filter_dates

--- a/templates/email.html
+++ b/templates/email.html
@@ -30,7 +30,7 @@
             <br>
             If we have this savings rate all the time, we would have to work for
             {{last_month_savings_rate | years_to_fi_filter}} years in total to reach 
-            financial independence.!
+            financial independence!
 
         </div>
 </html>
