--- a/templates/email.html
+++ b/templates/email.html
@@ -17,7 +17,7 @@
 
             <br>
             At this savings rate, we become financially independent after
-            {{all_time_savings_rate | years_to_fi_filter}} total working years!
+            {{all_time_savings_rate | years_to_fi_filter}} total working years ({{ (all_time_savings_rate | years_to_fi_filter) - (annual_savings_trend[-1][0] - year_work_began)}} remaining years of work)!
         </div>
 
 
@@ -33,7 +33,7 @@
 
             <br>
             If we have this savings rate all the time, we become financially independent after
-            {{last_month_savings_rate | years_to_fi_filter}} total working years!
+            {{last_month_savings_rate | years_to_fi_filter}} total working years ({{ (last_month_savings_rate | years_to_fi_filter) - (annual_savings_trend[-1][0] - year_work_began)}} remaining years of work)!
 
         </div>
 
@@ -41,6 +41,8 @@
             <h2>Annual Trend in Savings Rate</h2>
             {% for year_savings in annual_savings_trend %}
             {{year_savings[0]}}: {{year_savings[1] | percentage_filter}}
+            ({{year_savings[1] | years_to_fi_filter}} total working years 
+            to reach financial independence)
             <br>
             {% endfor %}
 </html>
